# Aeolian

./: .gitignore  CMakeLists.txt  README.md  aeolian.code-workspace  axrgb.code-workspace  axrgb.code-workspace.v4.4.6  axrgb.code-workspace.v5.1.2  debug.txt  idf_component.yml  jsconfig.json  nvs_partition_data.csv  package-lock.json  package.json  partitions.csv  partitions.dbg  sdkconfig.defaults  sdkconfig.testing
components/espfs/: CMakeLists.txt  Kconfig
components/espfs/espfs/: espfs.c  espfs_priv.h  espfs_vfs.c  heatshrink_decoder.c
components/espfs/extra/: espfs.yaml.example  espfs_debug.yaml  espfs_defaults.yaml  include.cmake  mkespfsimage.py
components/espfs/include/: espfs_vfs.h
configs/: sdkconfig.caravan  sdkconfig.debug  sdkconfig.debug.nodebug  sdkconfig.debug_ocd  sdkconfig.hwdbg  sdkconfig.olimex  sdkconfig.olimex.nodebug  sdkconfig.prod  sdkconfig.s3matrix  sdkconfig.segger  sdkconfig.segger_debug  sdkconfig.segger_pm  sdkconfig.segger_release  sdkconfig.segger_sysview  sdkconfig.tmp  sdkconfig.ttgo  sdkconfig.workshop  sdkconfig.wsa
html/: 404.html  console.html  flash.html  graphs.html  index.html  mqttconfig.html  patterns.html  schedule.html  tasks.html  themes.html  wifi.html  wsa.html
html/css/: clock.css  clockpicker.css  common.css  schedule.css  signalbars.css  siimple.min.css  style.css  themes.css  timesel.css  wifi.css
html/js/: 140medley.js  ansi_up.js  clockpicker.js  common.js  console.js  dragable.js  flash.js  graphs.js  index.js  monthsel.js  schedule.js  sharedsel.js  tasks.js  themes.js  timesel.js  wifi.js
include/: app_cctv.h  app_configs.h  app_flash.h  app_gpio.h  app_httpd.h  app_lightcontrol.h  app_main.h  app_mqtt.h  app_mqtt_config.h  app_ota.h  app_schedule.h  app_sntp.h  app_task.h  app_timer.h  app_utils.h  app_websockets.h  app_wifi.h  app_yuarel.h  base64.h  build_number.h  cgi_config.h  cgi_lightcontrol.h  colours.h  device_control.h  lib8.h  moonphase.h  mqtt_settings.h  newlib8.h  patterns.h  sundial.h  ws2812_driver.h
main/: CMakeLists.txt  FreeRTOS-openocd.cpp  Kconfig.projbuild  app_cctv.cpp  app_configs.cpp  app_flash.cpp  app_gpio.cpp  app_httpd.cpp  app_lightcontrol.cpp  app_main.cpp  app_mqtt.cpp  app_mqtt_config.cpp  app_mqtt_settings.cpp  app_ota.cpp  app_schedule.cpp  app_sntp.cpp  app_task.cpp  app_timer.cpp  app_utils.cpp  app_websockets.cpp  app_wifi.cpp  app_yuarel.cpp  base64.cpp  cgi_config.cpp  cgi_lightcontrol.cpp  colours.cpp  device_control.cpp  idf_component.yml  lib8.cpp  moonphase.cpp  mqtt_config.cpp  mqtt_settings.cpp  newlib8.cpp  patterns.cpp  sundial.cpp  ws2812_driver.cpp
openocd/: esp-prog.cfg  olimex.cfg  segger.cfg
tools/: reboot  set_env_vars.ps1  upload_fw
