idf_component_register(SRCS
  "app_cctv.cpp"
  "app_configs.cpp"
  "app_flash.cpp"
  "app_gpio.cpp"
  "app_httpd.cpp"
  "app_lightcontrol.cpp"
  "app_main.cpp"
  "app_mqtt.cpp"
  "app_ota.cpp"
  "app_schedule.cpp"
  "app_sntp.cpp"
  "app_task.cpp"
  "app_timer.cpp"
  "app_utils.cpp"
  "app_websockets.cpp"
  "app_wifi.cpp"
  "app_yuarel.cpp"
  "cgi_config.cpp"
  "cgi_lightcontrol.cpp"
  "colours.cpp"
  "device_control.cpp"
  "lib8.cpp"
  "moonphase.cpp"
  "mqtt_config.cpp"
  "mqtt_settings.cpp"
  "newlib8.cpp"
  "patterns.cpp"
  "sundial.cpp"
  "ws2812_driver.cpp"
  "FreeRTOS-openocd.cpp"
  INCLUDE_DIRS "." "../include/"
  REQUIRES esp_http_server espfs jsmn vfs
  REQUIRES partition_table bootloader_support esp_app_format esp_bootloader_format esp_partition mqtt
  PRIV_REQUIRES app_update driver efuse esp_app_format esptool_py esp_wifi esp_https_ota nvs_flash spi_flash
  )

